[gd_scene load_steps=4 format=2]

[ext_resource path="res://prototype/Bullet/BulletPickup.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 40.0

[node name="BulletPickup" type="RigidBody2D" index="0"]

input_pickable = false
collision_layer = 0
collision_mask = 3
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 5
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
magnet_range = 150
magnet_speed = 3000
min_bullets_dropped = 3
max_bullets_dropped = 8

[node name="PickupRange" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="MagnetRange" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetRange" index="0"]

shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.17511, 0.00390625, 1, 1 )
_sections_unfolded = [ "Rect" ]

[connection signal="body_entered" from="." to="." method="_on_BulletPickup_body_entered"]

[connection signal="body_entered" from="MagnetRange" to="." method="_on_MagnetRange_body_entered"]

[connection signal="body_exited" from="MagnetRange" to="." method="_on_MagnetRange_body_exited"]


